[project]
name = "dotfiles"
version = "0.0.0"
description = ""
authors = [{ name = "Ryan Carney", email = "arecarn@gmail.com" }]
requires-python = ">=3.9"
dependencies = [
    "invoke>=2.2.1",
    "gitpython>=3.1.7",
    "dploy>=0.1.2",
    "yamllint>=1.24.2",
]

[tool.ruff.lint]
select = ["E", "F", "I"]  # E/F = flake8, I = isort
ignore = ["E501"]

[tool.pylint."messages control"]
disable = ["locally-disabled"]

[tool.pylint.reports]
output-format = "colorized"
reports = false

[dependency-groups]
dev = [
    "pylint>=3.3.9",
]
