[project]
name = "dotfiles"
version = "0.0.0"
description = ""
authors = [{ name = "Ryan Carney", email = "arecarn@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "invoke>=2.2",
    "dploy>=0.1.3",
    "ansible>=9.0; sys_platform != 'win32'",
]

[tool.ruff.lint]
select = ["E", "F", "I"]  # E/F = flake8, I = isort
ignore = ["E501"]

[tool.pylint."messages control"]
disable = ["locally-disabled"]

[tool.pylint.reports]
output-format = "colorized"
reports = false

[dependency-groups]
dev = [
    "pylint>=3.3",
    "ruff>=0.9",
    "yamllint>=1.35",
]
